[package]
name = "nats-dead-letter"
version = "0.1.0"
edition = "2021"
description = "Dead letter queue functionality for NATS JetStream"
license = "MIT"
authors = ["Wyatt Lindquist <wquist@users.noreply.github.com>"]

[dependencies]
async-nats = "0.42"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stream-cancel = "0.8"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1.41", features = ["rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
trait-variant = "0.1"
eyre = "0.6"
sqlx = { version = "0.8.6", features=["time", "uuid", "postgres"], optional = true}
uuid = {version="1.18", features=["serde"]}

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
tracing-subscriber = "0.3"

[features]
default = ["postgres"]
postgres = ["dep:sqlx"]
